add 50 cooherent/incoherent samples for sanity test

--- a/testing_scripts/script_split_questions_by_coherence.ipynb
+++ b/testing_scripts/script_split_questions_by_coherence.ipynb
@@ -149,13 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "for label, group in df_all.groupby('label'):\n",
     "    out_fp = f'../datasets/sanity_tests/2024_all_{label}.csv'\n",
-    "    group.to_csv(out_fp, index=False)"
+    "    group_sample = group.head(50)\n",
+    "    group_sample.to_csv(out_fp, index=False)"
    ]
   },
   {
