more coherence judgments llama70B

--- a/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
+++ b/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
@@ -105,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "4f17cd13-2877-4543-a6b0-76e1b3615752",
    "metadata": {},
    "outputs": [],
    "source": [
     "### CHANGE THIS TO GENERATE FOR DIFF CHUNKS\n",
-    "year = 2023\n",
-    "chunk = 2\n",
+    "year = 2022\n",
+    "chunk = 1\n",
     "input_dir = f'../datasets/historical_questions/{year}/slices'\n",
     "input_filename = f'{year}_{chunk}_questions_from_current_justices'\n",
     "input_fp = f'{input_dir}/{input_filename}.csv'\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "55bbc543-6f66-4660-b44f-8db2535ab14b",
    "metadata": {},
    "outputs": [
@@ -163,82 +163,82 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>17393</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
+       "      <td>8903</td>\n",
+       "      <td>2022.22-58-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Ketanji Brown Jackson</td>\n",
-       "      <td>That if she was coercing  --coercing them und...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>So (c) is only applicable, mandatory detention...</td>\n",
+       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>17394</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
+       "      <td>8904</td>\n",
+       "      <td>2022.22-58-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Ketanji Brown Jackson</td>\n",
-       "      <td>But that's at the summary judgment stage, rig...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>-- so we would have to basically say that (c) ...</td>\n",
+       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>17395</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
+       "      <td>8905</td>\n",
+       "      <td>2022.22-58-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>Sonia Sotomayor</td>\n",
-       "      <td>And what does that have to do with the NRA an...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>That's the logic of their -- that's the logic ...</td>\n",
+       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>17396</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
+       "      <td>8906</td>\n",
+       "      <td>2022.22-58-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>But what made it illegal for  -- NRA didn't h...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>Samuel A. Alito, Jr.</td>\n",
+       "      <td>Well, I don't understand the states' argument ...</td>\n",
+       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>17397</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
+       "      <td>8907</td>\n",
+       "      <td>2022.22-58-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>Yeah. All right. Then stop. And why are the o...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>And so, therefore, it's sort of analogous to m...</td>\n",
+       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0    transcript_id question_addressee                justice  \\\n",
-       "0       17393  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
-       "1       17394  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
-       "2       17395  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
-       "3       17396  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
-       "4       17397  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "   Unnamed: 0   transcript_id question_addressee                justice  \\\n",
+       "0        8903  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
+       "1        8904  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
+       "2        8905  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
+       "3        8906  2022.22-58-t01         petitioner   Samuel A. Alito, Jr.   \n",
+       "4        8907  2022.22-58-t01         petitioner  Ketanji Brown Jackson   \n",
        "\n",
        "                                       question_text  \\\n",
-       "0   That if she was coercing  --coercing them und...   \n",
-       "1   But that's at the summary judgment stage, rig...   \n",
-       "2   And what does that have to do with the NRA an...   \n",
-       "3   But what made it illegal for  -- NRA didn't h...   \n",
-       "4   Yeah. All right. Then stop. And why are the o...   \n",
+       "0  So (c) is only applicable, mandatory detention...   \n",
+       "1  -- so we would have to basically say that (c) ...   \n",
+       "2  That's the logic of their -- that's the logic ...   \n",
+       "3  Well, I don't understand the states' argument ...   \n",
+       "4  And so, therefore, it's sort of analogous to m...   \n",
        "\n",
        "                                   opening_statement  year  \n",
-       "0  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
-       "1  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
-       "2  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
-       "3  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
-       "4  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  "
+       "0  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
+       "1  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
+       "2  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
+       "3  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
+       "4  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,129 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "99bd37f2-6228-4a14-b320-b5b6aa354694",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>transcript_id</th>\n",
-       "      <th>question_addressee</th>\n",
-       "      <th>justice</th>\n",
-       "      <th>question_text</th>\n",
-       "      <th>opening_statement</th>\n",
-       "      <th>year</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17393</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Ketanji Brown Jackson</td>\n",
-       "      <td>That if she was coercing  --coercing them und...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>coherent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>17394</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Ketanji Brown Jackson</td>\n",
-       "      <td>But that's at the summary judgment stage, rig...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>coherent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17395</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>And what does that have to do with the NRA an...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>incoherent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17396</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>But what made it illegal for  -- NRA didn't h...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>coherent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17397</td>\n",
-       "      <td>2023.22-842-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>Yeah. All right. Then stop. And why are the o...</td>\n",
-       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>coherent</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0    transcript_id question_addressee                justice  \\\n",
-       "0       17393  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
-       "1       17394  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
-       "2       17395  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
-       "3       17396  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
-       "4       17397  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
-       "\n",
-       "                                       question_text  \\\n",
-       "0   That if she was coercing  --coercing them und...   \n",
-       "1   But that's at the summary judgment stage, rig...   \n",
-       "2   And what does that have to do with the NRA an...   \n",
-       "3   But what made it illegal for  -- NRA didn't h...   \n",
-       "4   Yeah. All right. Then stop. And why are the o...   \n",
-       "\n",
-       "                                   opening_statement  year       label  \n",
-       "0  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
-       "1  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
-       "2  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  incoherent  \n",
-       "3  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
-       "4  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['label'] = df.apply(\n",
     "    lambda row: get_coherence_judgments(row['opening_statement'], row['question_text']), axis=1\n",
@@ -390,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b8b27229-0184-4109-80d7-6e7ce4c0ce99",
    "metadata": {},
    "outputs": [],
