add coherence judgments last 5 years + 2018 2/3 chunks

--- a/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
+++ b/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -105,14 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "4f17cd13-2877-4543-a6b0-76e1b3615752",
    "metadata": {},
    "outputs": [],
    "source": [
     "### CHANGE THIS TO GENERATE FOR DIFF CHUNKS\n",
-    "year = 2022\n",
-    "chunk = 1\n",
+    "\n",
+    "### NEXT TODO IS 2018, chunk 2\n",
+    "year = 'TO_FILL'\n",
+    "chunk = 'TO_FILL'\n",
     "input_dir = f'../datasets/historical_questions/{year}/slices'\n",
     "input_filename = f'{year}_{chunk}_questions_from_current_justices'\n",
     "input_fp = f'{input_dir}/{input_filename}.csv'\n",
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "55bbc543-6f66-4660-b44f-8db2535ab14b",
    "metadata": {},
    "outputs": [
@@ -163,52 +165,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>8903</td>\n",
-       "      <td>2022.22-58-t01</td>\n",
+       "      <td>34267</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>So (c) is only applicable, mandatory detention...</td>\n",
-       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>Amy Coney Barrett</td>\n",
+       "      <td>You know, and so the government points out tha...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8904</td>\n",
-       "      <td>2022.22-58-t01</td>\n",
+       "      <td>34268</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>-- so we would have to basically say that (c) ...</td>\n",
-       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>Amy Coney Barrett</td>\n",
+       "      <td>Doesn't Garmon do something a little bit diffe...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8905</td>\n",
-       "      <td>2022.22-58-t01</td>\n",
+       "      <td>34269</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Sonia Sotomayor</td>\n",
-       "      <td>That's the logic of their -- that's the logic ...</td>\n",
-       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>Elena Kagan</td>\n",
+       "      <td>Why -- why is it that there is such a sharp di...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8906</td>\n",
-       "      <td>2022.22-58-t01</td>\n",
+       "      <td>34270</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
        "      <td>petitioner</td>\n",
-       "      <td>Samuel A. Alito, Jr.</td>\n",
-       "      <td>Well, I don't understand the states' argument ...</td>\n",
-       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>-- there was not a Garmon issue in Bill Johnso...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8907</td>\n",
-       "      <td>2022.22-58-t01</td>\n",
+       "      <td>34271</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
        "      <td>petitioner</td>\n",
        "      <td>Ketanji Brown Jackson</td>\n",
-       "      <td>And so, therefore, it's sort of analogous to m...</td>\n",
-       "      <td>&lt;speaker&gt;Elizabeth B. Prelogar&lt;/speaker&gt;&lt;text&gt;...</td>\n",
+       "      <td>Could a state court decide -- if this was sent...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -216,29 +218,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0   transcript_id question_addressee                justice  \\\n",
-       "0        8903  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
-       "1        8904  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
-       "2        8905  2022.22-58-t01         petitioner        Sonia Sotomayor   \n",
-       "3        8906  2022.22-58-t01         petitioner   Samuel A. Alito, Jr.   \n",
-       "4        8907  2022.22-58-t01         petitioner  Ketanji Brown Jackson   \n",
+       "   Unnamed: 0     transcript_id question_addressee                justice  \\\n",
+       "0       34267  2022.21-1449-t01         petitioner      Amy Coney Barrett   \n",
+       "1       34268  2022.21-1449-t01         petitioner      Amy Coney Barrett   \n",
+       "2       34269  2022.21-1449-t01         petitioner            Elena Kagan   \n",
+       "3       34270  2022.21-1449-t01         petitioner  Ketanji Brown Jackson   \n",
+       "4       34271  2022.21-1449-t01         petitioner  Ketanji Brown Jackson   \n",
        "\n",
        "                                       question_text  \\\n",
-       "0  So (c) is only applicable, mandatory detention...   \n",
-       "1  -- so we would have to basically say that (c) ...   \n",
-       "2  That's the logic of their -- that's the logic ...   \n",
-       "3  Well, I don't understand the states' argument ...   \n",
-       "4  And so, therefore, it's sort of analogous to m...   \n",
+       "0  You know, and so the government points out tha...   \n",
+       "1  Doesn't Garmon do something a little bit diffe...   \n",
+       "2  Why -- why is it that there is such a sharp di...   \n",
+       "3  -- there was not a Garmon issue in Bill Johnso...   \n",
+       "4  Could a state court decide -- if this was sent...   \n",
        "\n",
        "                                   opening_statement  year  \n",
-       "0  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
-       "1  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
-       "2  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
-       "3  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  \n",
-       "4  <speaker>Elizabeth B. Prelogar</speaker><text>...  2022  "
+       "0  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  \n",
+       "1  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  \n",
+       "2  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  \n",
+       "3  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  \n",
+       "4  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,10 +260,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "99bd37f2-6228-4a14-b320-b5b6aa354694",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>transcript_id</th>\n",
+       "      <th>question_addressee</th>\n",
+       "      <th>justice</th>\n",
+       "      <th>question_text</th>\n",
+       "      <th>opening_statement</th>\n",
+       "      <th>year</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34267</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Amy Coney Barrett</td>\n",
+       "      <td>You know, and so the government points out tha...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34268</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Amy Coney Barrett</td>\n",
+       "      <td>Doesn't Garmon do something a little bit diffe...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>34269</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Elena Kagan</td>\n",
+       "      <td>Why -- why is it that there is such a sharp di...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>34270</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>-- there was not a Garmon issue in Bill Johnso...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>34271</td>\n",
+       "      <td>2022.21-1449-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>Could a state court decide -- if this was sent...</td>\n",
+       "      <td>&lt;speaker&gt;Noel J. Francisco&lt;/speaker&gt;&lt;text&gt;Mr. ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     transcript_id question_addressee                justice  \\\n",
+       "0       34267  2022.21-1449-t01         petitioner      Amy Coney Barrett   \n",
+       "1       34268  2022.21-1449-t01         petitioner      Amy Coney Barrett   \n",
+       "2       34269  2022.21-1449-t01         petitioner            Elena Kagan   \n",
+       "3       34270  2022.21-1449-t01         petitioner  Ketanji Brown Jackson   \n",
+       "4       34271  2022.21-1449-t01         petitioner  Ketanji Brown Jackson   \n",
+       "\n",
+       "                                       question_text  \\\n",
+       "0  You know, and so the government points out tha...   \n",
+       "1  Doesn't Garmon do something a little bit diffe...   \n",
+       "2  Why -- why is it that there is such a sharp di...   \n",
+       "3  -- there was not a Garmon issue in Bill Johnso...   \n",
+       "4  Could a state court decide -- if this was sent...   \n",
+       "\n",
+       "                                   opening_statement  year     label  \n",
+       "0  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  coherent  \n",
+       "1  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  Coherent  \n",
+       "2  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  coherent  \n",
+       "3  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  coherent  \n",
+       "4  <speaker>Noel J. Francisco</speaker><text>Mr. ...  2022  coherent  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['label'] = df.apply(\n",
     "    lambda row: get_coherence_judgments(row['opening_statement'], row['question_text']), axis=1\n",
@@ -271,12 +392,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b8b27229-0184-4109-80d7-6e7ce4c0ce99",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(out_fp, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0acfbce-cb89-4f23-ab62-08fae9f34bbe",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Loop historical data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "954abbf7-8535-4f77-9f77-88c8e253be3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on chunk 0\n",
+      "Saved results for chunk 0 to ../datasets/coherence/Meta-Llama-3.1-70B-Instruct/2018_0_questions_from_current_justices.csv\n",
+      "Running on chunk 1\n",
+      "Saved results for chunk 1 to ../datasets/coherence/Meta-Llama-3.1-70B-Instruct/2018_1_questions_from_current_justices.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 2018\n",
+    "for i in range(2):\n",
+    "    chunk = i\n",
+    "    input_dir = f'../datasets/historical_questions/{year}/slices'\n",
+    "    input_filename = f'{year}_{chunk}_questions_from_current_justices'\n",
+    "    input_fp = f'{input_dir}/{input_filename}.csv'\n",
+    "\n",
+    "    out_dir = f'../datasets/coherence/'\n",
+    "    model = model_name.split('/')[-1]\n",
+    "    out_subdir = os.path.join(out_dir, model)\n",
+    "    os.makedirs(out_subdir, exist_ok=True)\n",
+    "    out_fp = f'{out_subdir}/{input_filename}.csv'\n",
+    "    \n",
+    "    df = pd.read_csv(input_fp)\n",
+    "    \n",
+    "    print(f\"Running on chunk {i}\")\n",
+    "    df['label'] = df.apply(\n",
+    "        lambda row: get_coherence_judgments(row['opening_statement'], row['question_text']), axis=1\n",
+    "    )\n",
+    "    df.to_csv(out_fp, index=False)\n",
+    "    print(f\"Saved results for chunk {i} to {out_fp}\")"
    ]
   },
   {
