Newest UI version

--- a/annotation_ui.ipynb
+++ b/annotation_ui.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,14 @@
    ],
    "source": [
     "BRIEF_TRANSCRIPTS_DIR = \"2023-2024_case_briefs/\"\n",
+    "\n",
+    "# questions\n",
+    "q1_realistic = \"Given the opening statement, is this question realistic for the justice to ask?\"\n",
+    "q2_similarity = \"Is this question similar in content to something the justice actually asked?\"\n",
+    "q3_valence = \"Is this question similar in valence/sentiment to the justice's actual questions?\"\n",
+    "q4_helpfulness = \"If you were preparing this opening statement, would you find this question helpful?\"\n",
+    "q5_preference = \"If you were preparing for oral arguments, would you prefer the model's question to the actual question?\"\n",
+    "\n",
     "with open('datasets/2024_questions_for_eval.json') as f:\n",
     "    all_data_to_annotate = json.load(f)\n",
     "\n",
@@ -152,20 +160,16 @@
     "    \n",
     "        @gr.render(inputs=generated_questions)\n",
     "        def show_split(generated_questions):\n",
-    "            q1_realistic = \"Given the opening statement, is this question realistic for the justice to ask?\"\n",
-    "            q2_similarity = \"Is this question similar in content to something the justice actually asked?\"\n",
-    "            q3_valence = \"Is this question similar in valence/sentiment to the justice's actual questions?\"\n",
-    "            q4_helpfulness = \"If you were preparing this opening statement, would you find this question helpful?\"\n",
-    "            q5_preference = \"If you were preparing for oral arguments, would you prefer the model's question to the actual question?\"\n",
     "            for i in range(len(generated_questions)):\n",
     "                with gr.Tab(f\"Question {i + 1}\"):\n",
-    "                    predicted_question = gr.Markdown(f\"**Predicted Question**: \\\"{generated_questions[i]}\\\"\")\n",
+    "                    gr.Markdown(f\"**Predicted Question**: \\\"{generated_questions[i]}\\\"\")\n",
     "                    is_realistic = gr.Radio([\"Yes\", \"No\"], label=q1_realistic, key=i)\n",
+    "                    print(is_realistic.key)\n",
     "                    how_similar = make_likert_scale(q2_similarity, \"Similar\", \"Dissimilar\", i)\n",
     "                    how_sentiment_similar = make_likert_scale(q3_valence, \"Dissimilar in Sentiment\", \"Similar in Sentiment\", i)\n",
     "                    how_helpful = make_likert_scale(q4_helpfulness, \"Unhelpful\", \"Helpful\", i)\n",
     "                    how_prefer = make_likert_scale(q5_preference, \"Prefer the Actual Question\", \"Prefer the Model Question\", i)\n",
-    "            submit_button = gr.Button(value=\"Submit Annotation\")\n",
+    "        submit_button = gr.Button(value=\"Submit Annotation\")\n",
     "\n",
     "    # config set-up interactive logic\n",
     "    petitioner_or_respondent_select.select(fn=lambda: gr.Radio(visible=True), inputs=None, outputs=justice_select)\n",
