add gpt4o questions

--- a/data_cleaning_scripts/script_add_qid_to_questions_df.ipynb
+++ b/data_cleaning_scripts/script_add_qid_to_questions_df.ipynb
@@ -11,15 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add question ids to the two main question csvs for 2024:\n",
+    "Add question ids to the three main question csvs for 2024:\n",
     "\n",
     "* Actual questions on 13 transcripts: `2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv`\n",
-    "* Llama generated questions on 13 transcripts: `2024_llm_questions_Meta-Llama-3.1-70B-Instruct.csv`"
+    "* Llama generated questions on 13 transcripts: `2024_llm_questions_Meta-Llama-3.1-70B-Instruct.csv`\n",
+    "* GPT4o generated questions on 13 transcripts: `2024_llm_questions_gpt-4o-2024-08-06.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filepaths\n",
     "input_dir = '../datasets/2024_questions'\n",
     "input_fp_actual = f'{input_dir}/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
-    "input_fp_llm = f'{input_dir}/2024_llm_questions_Meta-Llama-3.1-70B-Instruct.csv'\n",
+    "input_fp_llama = f'{input_dir}/2024_llm_questions_Meta-Llama-3.1-70B-Instruct.csv'\n",
+    "input_fp_gpt = f'{input_dir}/2024_llm_questions_gpt-4o-2024-08-06.csv'\n",
     "\n",
     "output_dir = '../datasets/2024_questions/with_qid'\n",
     "out_fp_actual = f'{output_dir}/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct_qid.csv'\n",
-    "out_fp_llm = f'{output_dir}/2024_llm_questions_Meta-Llama-3.1-70B-Instruct_qid.csv'"
+    "out_fp_llama = f'{output_dir}/2024_llm_questions_Meta-Llama-3.1-70B-Instruct_qid.csv'\n",
+    "out_fp_gpt = f'{output_dir}/2024_llm_questions_gpt-4o-2024-08-06_qid.csv'\n"
    ]
   },
   {
@@ -67,13 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add question_id column\n",
+    "# # add question_id column\n",
     "df_actual_questions = pd.read_csv(input_fp_actual)\n",
-    "df_llm_questions = pd.read_csv(input_fp_llm)\n",
+    "df_llama_questions = pd.read_csv(input_fp_llama)\n",
+    "df_gpt_questions = pd.read_csv(input_fp_gpt)\n",
     "\n",
     "\n",
     "df_actual_questions = add_question_id_to_df(df_actual_questions)\n",
-    "df_llm_questions = add_question_id_to_df(df_llm_questions)"
+    "df_llama_questions = add_question_id_to_df(df_llama_questions)\n",
+    "df_gpt_questions = add_question_id_to_df(df_gpt_questions)"
    ]
   },
   {
@@ -84,7 +89,8 @@
    "source": [
     "# save \n",
     "df_actual_questions.to_csv(out_fp_actual)\n",
-    "df_llm_questions.to_csv(out_fp_llm)"
+    "df_llama_questions.to_csv(out_fp_llama)\n",
+    "df_gpt_questions.to_csv(out_fp_gpt)"
    ]
   }
  ],
