--- a/data_cleaning_scripts/script_reformat_llm_questions_df.ipynb
+++ b/data_cleaning_scripts/script_reformat_llm_questions_df.ipynb
@@ -54,8 +54,8 @@
        "      <th>respondent_full_text</th>\n",
        "      <th>questions_sotomayor_petitioner</th>\n",
        "      <th>questions_sotomayor_respondent</th>\n",
-       "      <th>questions_alito_respondent</th>\n",
        "      <th>questions_alito_petitioner</th>\n",
+       "      <th>questions_alito_respondent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -67,10 +67,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Anthony A. Yang&lt;/speaker&gt;&lt;text&gt; Mr. C...</td>\n",
        "      <td>&lt;speaker&gt;Anthony A. Yang&lt;/speaker&gt;&lt;text&gt; Mr. C...</td>\n",
-       "      <td>[\"Can you explain why you believe the Court sh...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Can you explain how your proposed bright-lin...</td>\n",
-       "      <td>[\"How do you respond to the argument that the ...</td>\n",
+       "      <td>[\"Can you elaborate on why a preliminary injun...</td>\n",
+       "      <td>[\"Can you clarify whether there are situations...</td>\n",
+       "      <td>[\"How do you reconcile your argument with case...</td>\n",
+       "      <td>[\"Can you clarify the relationship between int...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -80,10 +80,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Easha Anand&lt;/speaker&gt;&lt;text&gt; Mr. Chief...</td>\n",
        "      <td>&lt;speaker&gt;Easha Anand&lt;/speaker&gt;&lt;text&gt; Mr. Chief...</td>\n",
-       "      <td>[\"Isn't it true that a preliminary injunction ...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the concern...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Isn't it true that some circuits have adopte...</td>\n",
+       "      <td>[\"Can you clarify how you distinguish between ...</td>\n",
+       "      <td>[\"Could you elaborate on why the phrase \\\"dama...</td>\n",
+       "      <td>[\"How do you reconcile your interpretation of ...</td>\n",
+       "      <td>[\"How do you reconcile the usage of \\\"damages ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -93,10 +93,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Peter A. Patterson&lt;/speaker&gt;&lt;text&gt; Mr...</td>\n",
        "      <td>&lt;speaker&gt;Peter A. Patterson&lt;/speaker&gt;&lt;text&gt; Mr...</td>\n",
-       "      <td>[\"Counselor, can you explain how the bright-li...</td>\n",
-       "      <td>[\"How do you respond to the argument that a pr...</td>\n",
-       "      <td>[\"Isn't your proposed bright-line rule overly ...</td>\n",
-       "      <td>[\"Can you clarify why you believe that a preli...</td>\n",
+       "      <td>[\"Ms. Prelogar, could you elucidate on how the...</td>\n",
+       "      <td>[\"Mr. Patterson, how do you reconcile your int...</td>\n",
+       "      <td>[\"How do you respond to the argument that requ...</td>\n",
+       "      <td>[\"How do you interpret Congress's decision to ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -106,10 +106,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Kevin K. Russell&lt;/speaker&gt;&lt;text&gt; Mr. ...</td>\n",
        "      <td>&lt;speaker&gt;Kevin K. Russell&lt;/speaker&gt;&lt;text&gt; Mr. ...</td>\n",
-       "      <td>[\"Counselor, doesn't your argument rely too he...</td>\n",
-       "      <td>[\"How do you respond to the argument that the ...</td>\n",
-       "      <td>[\"Can you explain why the legislative history ...</td>\n",
-       "      <td>[\"How do you respond to the argument that a pr...</td>\n",
+       "      <td>[\"Could you explain why you believe the Ninth ...</td>\n",
+       "      <td>[\"Can you elaborate on the significance of mat...</td>\n",
+       "      <td>[\"Can you clarify how adopting the Ninth Circu...</td>\n",
+       "      <td>[\"Can you clarify what specific criteria the p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -119,10 +119,10 @@
        "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
        "      <td>&lt;speaker&gt;Edmund G. LaCour, Jr.&lt;/speaker&gt;&lt;text&gt;...</td>\n",
        "      <td>&lt;speaker&gt;Edmund G. LaCour, Jr.&lt;/speaker&gt;&lt;text&gt;...</td>\n",
-       "      <td>[\"Counselor, doesn't the fact that a prelimina...</td>\n",
-       "      <td>[\"Counselor, isn't it true that your proposed ...</td>\n",
-       "      <td>[\"Counselor, how do you respond to the argumen...</td>\n",
-       "      <td>[\"Doesn't the fact that a preliminary injuncti...</td>\n",
+       "      <td>[\"How do you distinguish between a neutral pro...</td>\n",
+       "      <td>[\"How does the doctrine of preemption apply in...</td>\n",
+       "      <td>[\"How do you respond to the argument that Alab...</td>\n",
+       "      <td>[\"Can you clarify how the neutral jurisdiction...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -165,32 +165,32 @@
        "4  <speaker>Edmund G. LaCour, Jr.</speaker><text>...   \n",
        "\n",
        "                      questions_sotomayor_petitioner  \\\n",
-       "0  [\"Can you explain why you believe the Court sh...   \n",
-       "1  [\"Isn't it true that a preliminary injunction ...   \n",
-       "2  [\"Counselor, can you explain how the bright-li...   \n",
-       "3  [\"Counselor, doesn't your argument rely too he...   \n",
-       "4  [\"Counselor, doesn't the fact that a prelimina...   \n",
+       "0  [\"Can you elaborate on why a preliminary injun...   \n",
+       "1  [\"Can you clarify how you distinguish between ...   \n",
+       "2  [\"Ms. Prelogar, could you elucidate on how the...   \n",
+       "3  [\"Could you explain why you believe the Ninth ...   \n",
+       "4  [\"How do you distinguish between a neutral pro...   \n",
        "\n",
        "                      questions_sotomayor_respondent  \\\n",
-       "0  [\"Counselor, how do you respond to the argumen...   \n",
-       "1  [\"Counselor, how do you respond to the concern...   \n",
-       "2  [\"How do you respond to the argument that a pr...   \n",
-       "3  [\"How do you respond to the argument that the ...   \n",
-       "4  [\"Counselor, isn't it true that your proposed ...   \n",
+       "0  [\"Can you clarify whether there are situations...   \n",
+       "1  [\"Could you elaborate on why the phrase \\\"dama...   \n",
+       "2  [\"Mr. Patterson, how do you reconcile your int...   \n",
+       "3  [\"Can you elaborate on the significance of mat...   \n",
+       "4  [\"How does the doctrine of preemption apply in...   \n",
        "\n",
-       "                          questions_alito_respondent  \\\n",
-       "0  [\"Can you explain how your proposed bright-lin...   \n",
-       "1  [\"Counselor, how do you respond to the argumen...   \n",
-       "2  [\"Isn't your proposed bright-line rule overly ...   \n",
-       "3  [\"Can you explain why the legislative history ...   \n",
-       "4  [\"Counselor, how do you respond to the argumen...   \n",
+       "                          questions_alito_petitioner  \\\n",
+       "0  [\"How do you reconcile your argument with case...   \n",
+       "1  [\"How do you reconcile your interpretation of ...   \n",
+       "2  [\"How do you respond to the argument that requ...   \n",
+       "3  [\"Can you clarify how adopting the Ninth Circu...   \n",
+       "4  [\"How do you respond to the argument that Alab...   \n",
        "\n",
-       "                          questions_alito_petitioner  \n",
-       "0  [\"How do you respond to the argument that the ...  \n",
-       "1  [\"Isn't it true that some circuits have adopte...  \n",
-       "2  [\"Can you clarify why you believe that a preli...  \n",
-       "3  [\"How do you respond to the argument that a pr...  \n",
-       "4  [\"Doesn't the fact that a preliminary injuncti...  "
+       "                          questions_alito_respondent  \n",
+       "0  [\"Can you clarify the relationship between int...  \n",
+       "1  [\"How do you reconcile the usage of \\\"damages ...  \n",
+       "2  [\"How do you interpret Congress's decision to ...  \n",
+       "3  [\"Can you clarify what specific criteria the p...  \n",
+       "4  [\"Can you clarify how the neutral jurisdiction...  "
       ]
      },
      "execution_count": 2,
@@ -199,7 +199,13 @@
     }
    ],
    "source": [
-    "df_llm_questions = pd.read_csv('../datasets/2024_full_text_sotomayor_alito_questions.csv')\n",
+    "input_dir = '../datasets/llm_outputs/generate_questions'\n",
+    "\n",
+    "# input_fp = f'{input_dir}/2024_full_text_sotomayor_alito_questions.csv'\n",
+    "input_fp = f'{input_dir}/2024_full_text_sotomayor_alito_questions_gpt-4o-2024-08-06.csv'\n",
+    "\n",
+    "df_llm_questions = pd.read_csv(input_fp)\n",
+    "\n",
     "df_llm_questions.head()"
    ]
   },
@@ -236,13 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "79656f16-8939-4176-a1af-16ba630c0f10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'Meta-Llama-3.1-70B-Instruct'\n",
-    "out_fp = f'../datasets/2024_llm_questions_{model_name}.csv'\n",
+    "out_dir = f'../datasets/2024_questions'\n",
+    "# model_name = 'Meta-Llama-3.1-70B-Instruct'\n",
+    "model_name = 'gpt-4o-2024-08-06'\n",
+    "out_fp = f'2024_llm_questions_{model_name}.csv'\n",
     "output_df.to_csv(out_fp, index=False)"
    ]
   },
@@ -414,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "research",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
